@@ -1,3 +1,8 @@
+4.x.xx
+======
+- Block panel autohide if the widget is grabbed (bug #4597).
+
+
 4.5.99.1
 ========
 - Fixed extern char** environ is not defined on BSD platforms (bug #4834).
